<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:src="@drawable/inmersoft"
            android:contentDescription="@string/img_logo"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUsuario"
            android:hint="@string/edt_Usuario"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColorHint="#566BE7"
            android:textColor="#263692"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtContrasena"
            android:hint="@string/edt_Contrasena"
            tools:targetApi="o"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColorHint="#566BE7"
            android:textColor="#263692"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:textSize="18sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_Iniciar"
            android:background="@color/colorBotton"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>