<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Registro">
    <LinearLayout
        android:id="@+id/LinearR"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:src="@drawable/inmersoft"
            android:contentDescription="@string/img_logo"

            />

        <TextView
            android:id="@+id/idUsuario"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#05155a"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNombre"
            android:hint="@string/edt_Nombre"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:textColorHint="#8494EE"
            android:textColor="#031061"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtMontoInicial"
            android:hint="@string/edt_MontoInicial"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:textColorHint="#8494EE"
            android:textColor="#031061"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:importantForAutofill="no" />


        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPagoMensual"
            android:hint="@string/edt_PagoMensual"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:textColorHint="#8494EE"
            android:textColor="#031061"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_Guardar"
            android:background="@color/colorBotton"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>